Added HTML, CSS, and Javascript elements to sample website

--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <body>
     <meta charset="utf-8">
-    <title>fuckfuckityfuckfuckfuck</title>
-    <p>at the elephant's trunk we care about three things</p>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Hi+Melody" rel='stylesheet' type='text/css'>
+    <title>TET</title>
+    <h1>THE ELEPHANT'S TRUNK</h1>
+    <p>at the elephant's trunk we care about four things</p>
     <ul>
       <li>coffee</li>
       <li>beer</li>
+      <li>comedy</li>
       <li>people</li>
     </ul>
     <p>not necessarily in that order</p>
-    <a href="http://www.french-inspection.com">FICS</a>
+    <a href="http://www.google.com">TET</a>
+    <img src="images/fics.jpg" alt=TET logo, An elephant sitting in front of a TRUNK.">
   </head>
-  <body>
-      <img src="images/fics.jpg" alt=FICS logo, sherrif's badge that says French Inspection around the ring.">
+  <button>Change user</button>
+  <script src="scripts/main.js"></script>
   </body>
 </html>
